[refactor] rename api route
